Updated and fixed layout issue with aavatar

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -12,6 +12,10 @@
     top: var(--static-space-64);
 }
 
+.avatar :global(img) {
+    object-position: top;
+}
+
 
 @media (--s) {
     .avatar {
